@@ -166,7 +166,7 @@ public class IRWriterAnalyzer implements IRWriterEncoder {
 
     private void increment(Operand operand) {
         Integer count = operandCounts.get(operand);
-        if (count == null) count = new Integer(0);
+        if (count == null) count = Integer.valueOf(0);
 
         operandCounts.put(operand, count + 1);
     }
